# dope

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md  rcc-scripts.conf
dope/: Cargo.toml
dope-core/: Cargo.toml
dope-core/src/: lib.rs
dope-panel/: Cargo.toml
dope-panel/src/: config_routes.rs  html.rs  main.rs
dope-panel/static/: app.js  config.js  index.html  logs.js  style.css  templates.js
dope-panel/templates/: activity-table.html  combined-row.html  config-page.html  csp-options.html  dashboard-page.html  dashboard-stats.html  domain-card.html  empty-state.html  header-pair.html  inject-options.html  logs-page.html  page-shell.html  remove-header.html  request-card.html  response-card.html  script-card.html  script-entry.html
dope/src/: charset.rs  handler.rs  inject.rs  logging.rs  main.rs  modify.rs  scripts.rs
lib/: gm_polyfill.js
patches/tokio-rustls/: Cargo.toml
scripts/: example.user.js
src/: config.rs  handler.rs  inject.rs  logging.rs  main.rs  modify.rs
