[package]
name = "dope"
version = "0.1.0"
edition = "2024"

[dependencies]
async-compression = {version = "0.4.41", features = ["tokio", "gzip", "brotli", "zlib", "zstd"]}
http-body-util = "0.1.3"
hudsucker = "0.24.0"
serde = {version = "1.0.228", features = ["derive"]}
tokio = {version = "1.50.0", features = ["rt-multi-thread"]}
tokio-util = {version = "0.7.18", features = ["io", "io-util"]}
toml = "1.0.6"
tracing = "0.1.44"
tracing-subscriber = "0.3.22"

[profile.release]
opt-level = "z"     
lto = true          
codegen-units = 1   
panic = "abort"     
strip = true