[package]
name = "dope-panel"
version = "0.1.2"
edition = "2024"

[dependencies]
dope-core = { path = "../dope-core" }
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
include_dir = "0.7"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
