[package]
name = "dope"
version = "0.1.2"
edition = "2024"

[dependencies]
dope-core = { path = "../dope-core" }
async-compression = {version = "0.4.41", features = ["tokio", "gzip", "brotli", "zlib", "zstd"]}
http-body-util = "0.1.3"
hudsucker = "0.24.0"
uuid = { version = "1.16.0", features = ["v4"] }
tokio = {version = "1.50.0", features = ["rt-multi-thread", "fs"]}
tokio-util = {version = "0.7.18", features = ["io", "io-util"]}
tracing = "0.1.44"
tracing-appender = "0.2.3"
tracing-subscriber = {version = "0.3.22", features = ["fmt", "registry", "env-filter"]}
